Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignTextIntegerField.quorum
class Main
    text txt
    action Main
        txt = cast(text, 5)
        if txt = "5"
            output "passed"
        end
    end
end