Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignTextIntObjField.quorum
class main
    Integer i
    text txt
    action Main
        i:SetValue(5)
        txt = cast(text, i)
    end
end